<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/backweather">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature_textView"
        android:id="@+id/temperatureTextView"
        android:gravity="center_horizontal"
        android:textSize="90sp"
        android:textColor="@color/abc_primary_text_material_dark"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100"
        android:paddingTop="32dp"
        android:gravity="center_horizontal"
        android:baselineAligned="false"
        android:id="@+id/linearLayout"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="50">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/humidityHeader_textView"
                android:id="@+id/humidityHeaderTextView"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:textColor="#80ffffff"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/humidityValue_textView"
                android:id="@+id/humidityValueTextView"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:paddingTop="4dp"
                android:textColor="@color/abc_primary_text_material_dark"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="50">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pressureHeader_textView"
                android:id="@+id/pressureHeaderTextView"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:textColor="#80ffffff"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pressureValue_textView"
                android:id="@+id/pressureValueTextView"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:paddingTop="4dp"
                android:textColor="@color/abc_primary_text_material_dark"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pressureValue_textView"
        android:id="@+id/textView2"
        android:gravity="center_horizontal"
        android:textSize="16sp"
        android:paddingTop="4dp"
        android:textColor="@color/abc_primary_text_material_dark"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pressureHeader_textView3"
        android:id="@+id/textView3"
        android:gravity="center_horizontal"
        android:textSize="16sp"
        android:textColor="#80ffffff"
        android:layout_marginTop="36dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pressureHeaderLux_textView"
        android:id="@+id/textView4"
        android:gravity="center_horizontal"
        android:textSize="16sp"
        android:textColor="#80ffffff"
        android:layout_below="@+id/temperatureTextView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pressureValue_textView"
        android:id="@+id/textView5"
        android:gravity="center_horizontal"
        android:textSize="16sp"
        android:paddingTop="4dp"
        android:textColor="@color/abc_primary_text_material_dark"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pressureHeader_textView2"
        android:id="@+id/textView"
        android:gravity="center_horizontal"
        android:textSize="16sp"
        android:textColor="#80ffffff"
        android:layout_marginTop="61dp"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:textColor="#80ffffff"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:text="@string/pressureHeader_textView4" />

    <TextView
        android:id="@+id/textView9"
        android:textColor="@color/abc_primary_text_material_dark"
        android:text="@string/pressureValue_textView"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_centerHorizontal="true"
         />


</RelativeLayout>